--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "main": "sr/index.js",
   "scripts": {
     "test": "localhost:5000"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "Rogerio-Fernandes",
